<resources>
    <string name="app_name">WellMe</string>
    <string name="registration_text">You\'re \nAlmost \nThere</string>
    <string name="login_text">Explore \n Your \n Strength</string>
    <string name="name_hint">First Name</string>
    <string name="name1">Name</string>
    <string name="mobile_number_hint">Mobile Number</string>
    <string name="otp_hint">OTP</string>
    <string name="user_name_hint">User Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="title">Title</string>
    <string name="email_hint">Email</string>
    <string name="email_address_hint">Email Address</string>
    <string name="password_hint">Password</string>
    <string name="new_password_hint">New Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="signup_btn">Signup</string>
    <string name="ok">OK</string>
    <string name="complaint_type_validation">Please select type first</string>
    <string name="title_validation">Please enter title</string>
    <string name="type_validation">Please select type</string>
    <string name="description_validation">Please enter description</string>
    <string name="description">Description</string>
    <string name="gender">Gender</string>
    <string name="forgot_passwod">Forgot \nPassword</string>
    <string name="reset_passwod">Reset \nPassword</string>
    <string name="forgot_password_text">Forgot Password?</string>
    <string name="language_known">Language known</string>
    <string name="mobile_number_empty_validation">Please enter mobile number</string>
    <string name="first_name_empty_validation">Please enter first name</string>
    <string name="user_name_empty_validation">Please enter user name</string>
    <string name="name_empty_validation">Please enter name</string>
    <string name="last_name_empty_validation">Please enter last name</string>
    <string name="gender_empty_validation">Please select gender</string>
    <string name="email_empty_validation">Please enter email</string>
    <string name="password_empty_validation">Please enter password</string>
    <string name="confirm_password_empty_validation">Please enter confirm password</string>
    <string name="email_invalid_validation">Please enter valid email address</string>
    <string name="password_invalid_validation">Password must be atleast 2 characters</string>
    <string name="password_mismatch">Mismatch Password</string>
    <string name="mobile_number_invalid_validation">Please enter valid mobile number</string>
    <string name="signup_text">Be signup, you agree to the Terms of Services and Privacy Policy</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="dont_get_otp">Don\'t get an OTP?</string>
    <string name="resend_otp1">Resend OTP</string>
    <string name="signup_text1">Signup</string>
    <string name="logout_text">Do you want to logout from this application?</string>
    <string name="login_btn">Login</string>
    <string name="done">Done</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="age_hint">Age</string>
    <string name="age_text">Age (in years)</string>
    <string name="weight_text">Weight (in kg)</string>
    <string name="height_text">Height (in cm)</string>
    <string name="weight_hint">Weight</string>
    <string name="height_hint">Height</string>
    <string name="hips">Hips</string>
    <string name="your_body_fat">Your Body Fat (in %)</string>
    <string name="your_muscle_mass">Your Muscle Mass (in %)</string>
    <string name="muscle_mass">Muscle Mass (in %)</string>
    <string name="click_here_to_add_body_fat">Click here to add Body Fat</string>
    <string name="click_here_to_add_muscle_mass">Click here to add Muscle Mass</string>
    <string name="click_here_to_add_hips">Click here to add Hip</string>
    <string name="your_hips">Your Hip (in cm)</string>
    <string name="hips1">Hip (in cm)</string>
    <string name="click_here_to_add_waist">Click here to add Waist</string>
    <string name="click_here_to_add_arm_left">Click here to add Arm Left</string>
    <string name="click_here_to_add_arm_right">Click here to add Arm Right</string>
    <string name="your_arm_right">Your Arm Right (in cm)</string>
    <string name="arm_right1">Arm Right (in cm)</string>
    <string name="your_arm_left">Your Arm Left (in cm)</string>
    <string name="arm_left1">Arm Left (in cm)</string>
    <string name="your_chest">Your Chest (in cm)</string>
    <string name="chest1">Chest (in cm)</string>
    <string name="your_waist">Your Waist (in cm)</string>
    <string name="waist1">Waist (in cm)</string>
    <string name="your_thigh">Your Thigh (in cm)</string>
    <string name="thigh1">Thigh (in cm)</string>
    <string name="your_calf">Your Calf (in cm)</string>
    <string name="calf1">Calf (in cm)</string>
    <string name="click_here_to_add_chest">Click here to add Chest</string>
    <string name="click_here_to_add_thigh">Click here to add Thigh</string>
    <string name="click_here_to_add_calf">Click here to add Calf</string>
    <string name="waist">Waist</string>
    <string name="chest">Chest</string>
    <string name="arm_left">Arm Left</string>
    <string name="arm_right">Arm Right</string>
    <string name="thigh">Thigh</string>
    <string name="calf">Calf</string>
    <string name="medical_condition">Medical Condition</string>
    <string name="occupation_hint">Occupation</string>
    <string name="complaint_hint">Select Complaint Type</string>
    <string name="feedback_hint">Select Feedback Type</string>
    <string name="state">State</string>
    <string name="measurement_hint">Measurements</string>
    <string name="distance">Distance</string>
    <string name="time">Time</string>
    <string name="speed">Speed</string>
    <string name="speed_unit">km/hr</string>
    <string name="mins">mins</string>
    <string name="set">Set</string>
    <string name="km">km</string>
    <string name="city_hint">City</string>
    <string name="done_btn">Done</string>
    <string name="age_empty_validation">Please enter age</string>
    <string name="weight_empty_validation">Please enter weight</string>
    <string name="height_empty_validation">Please enter height</string>
    <string name="medical_condtion_empty_validation">Please select medical condition</string>
    <string name="occupation_empty_validation">Please select occupation</string>
    <string name="goal_empty_validation">Please select goal</string>
    <string name="measurement_empty_validation">Please enter measurement</string>
    <string name="city_empty_validation">Please select city</string>
    <string name="state_empty_validation">Please select state</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="personal_details">Personal details</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="reminder_heading">Reminders you can set</string>
    <string name="to_lose_certain_amount_text">To Lose Certain Amount In Specified Time</string>
    <string name="to_gain_certain_amount_text">To Gain Certain Amount In Specified Time</string>
    <string name="to_lose_certain_amount_text_one">You need to take \n-2456 Calories</string>
    <string name="to_lose_certain_amount_text_two">Need to exercise and \nburn -1356 Calories</string>
    <string name="to_lose_certain_amount_text_three">Need to take - \n10000 steps daily.</string>
    <string name="lets_get_started">Let\'s Get Started</string>
    <string name="fitness_level">Fitness level</string>
    <string name="like_to_do_next_text">What You Like To Do Next</string>
    <string name="bring_you_to_wellme">What brings \nyou to \nWellMe</string>
    <string name="track_calorie">Track \nCalorie</string>
    <string name="get_diet_and_workout_plan">Get Diet And \nWorkout Plan</string>
    <string name="get_coached">Get \nCoached</string>
    <string name="next">Next</string>
    <string name="update">Update</string>
    <string name="stay_healthy">Stay \nHealthy</string>
    <string name="weight_loss">Weight Loss</string>
    <string name="increased_fitness">Increased Fitness</string>
    <string name="improve_medical_condition">Improve Medical Condition</string>
    <string name="muscle_gain">Muscle Gain</string>
    <string name="weight_gain">Weight Gain</string>
    <string name="overall_wellness">Overall Wellness</string>
    <string name="no_exercise">No Exercise</string>
    <string name="twice_a_week">Twice a Week</string>
    <string name="once_a_week">Once a Week</string>
    <string name="sometime">Sometime</string>
    <string name="your_bmi">Your BMI :</string>
    <string name="ideal_bmi">Ideal BMI :</string>
    <string name="ideal_weight">Ideal Weight :</string>
    <string name="current_weight1">Current Weight :</string>
    <string name="weight_summary">Weight Summary</string>
    <string name="ideal_time_to_achieve">Ideal time to achieve</string>
    <string name="fitness_level_validation">Please select any one fitness level</string>
    <string name="fitness_purpose_validation">Please select any one fitness purpose</string>
    <string name="kg">kg</string>
    <string name="current_weight">Current Weight</string>
    <string name="year">year(s)</string>
    <string name="feet">cm</string>
    <string name="intro">Lorem Ipsum is simply dummy text of the printing and typesetting industry</string>
    <string name="verify_number">Verify Number</string>
    <string name="send_otp_to_call">Send OTP to Call</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="request_for_booking">Request For Booking</string>
    <string name="buy_now">Buy Now</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="sent_number">We have sent a \"6 digit OTP\"</string>
    <string name="otp_invalid_message">Please enter valid otp</string>
    <string name="your_weight_today">Your Weight Today</string>
    <string name="coach_profile">Coach Profile</string>
    <string name="enter_weight">Enter Weight Today</string>
    <string name="add_weight_log">Add Weight Log</string>
    <string name="settings">Settings</string>
    <string name="notification">Notification</string>
    <string name="go_pro">Go Pro</string>
    <string name="stay_connected_with_fitness">Stay Connected with fitness</string>
    <string name="subscription">Subscription</string>
    <string name="offers">Offers</string>
    <string name="coupons">Coupons</string>
    <string name="restore_purchase">Restore Purchase</string>
    <string name="rate_app">Rate App</string>
    <string name="support">Support</string>
    <string name="workout">Workouts</string>
    <string name="pick_your_coach">Pick your coach</string>
    <string name="speciality">Speciality</string>
    <string name="pre_post_natal">Pre/Post natal</string>
    <string name="medical">Medical</string>
    <string name="lifestyle">Lifestyle</string>
    <string name="therapeutic">Therapeutic</string>
    <string name="sports_nutrition">Sports Nutrition</string>
    <string name="all">All</string>
    <string name="time_1">11:30 AM - 07:30 PM</string>
    <string name="time_2">03:30 PM - 11:30 PM</string>
    <string name="time_3">07:30 PM - 03:30 AM</string>
    <string name="time_4">11:30 PM - 07:30 AM</string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="very_hard">Very Hard</string>
    <string name="easy_time">0.25 Kg per week</string>
    <string name="medium_time">0.50 Kg per week</string>
    <string name="hard_time">0.75 Kg per week</string>
    <string name="very_hard_time">1.00 Kg per week</string>
    <string name="verify_otp">Verify \nOTP</string>
    <string name="verify">Verify</string>
</resources>