<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <androidx.core.widget.NestedScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        >
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:padding="@dimen/margin_large"
        >
        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back"
            />
        <TextView
            android:id="@+id/header"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/pick_your_coach"
            android:textSize="@dimen/text_size_xxxlarge"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/margin_large"
            />
        <TextView
            android:id="@+id/tv_speciality"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/speciality"
            android:textSize="@dimen/text_size_large"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/margin_normal"
            />
        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_marginLeft="@dimen/margin_normal"
            >
            <RadioButton
                android:id="@+id/rb_pre_post_natal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pre_post_natal"
                android:textSize="@dimen/text_size_medium"
                android:textColor="@color/black"
                android:button="@drawable/custom_radio_select"
                android:paddingHorizontal="@dimen/margin_normal"
                />
            <RadioButton
                android:id="@+id/rb_medical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/medical"
                android:textSize="@dimen/text_size_medium"
                android:textColor="@color/black"
                android:button="@drawable/custom_radio_select"
                android:layout_marginTop="@dimen/margin_normal"
                android:paddingHorizontal="@dimen/margin_normal"
                />
            <RadioButton
                android:id="@+id/rb_lifestyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lifestyle"
                android:button="@drawable/custom_radio_select"
                android:textSize="@dimen/text_size_medium"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/margin_normal"
                android:paddingHorizontal="@dimen/margin_normal"
                />
            <RadioButton
                android:id="@+id/rb_therapeutic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/therapeutic"
                android:textSize="@dimen/text_size_medium"
                android:textColor="@color/black"
                android:button="@drawable/custom_radio_select"
                android:layout_marginTop="@dimen/margin_normal"
                android:paddingHorizontal="@dimen/margin_normal"
                />
            <RadioButton
                android:id="@+id/rb_sports_nutrition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sports_nutrition"
                android:textSize="@dimen/text_size_medium"
                android:button="@drawable/custom_radio_select"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/margin_normal"
                android:paddingHorizontal="@dimen/margin_normal"
                />
            <RadioButton
                android:id="@+id/rb_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all"
                android:button="@drawable/custom_radio_select"
                android:textSize="@dimen/text_size_medium"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/margin_normal"
                android:paddingHorizontal="@dimen/margin_normal"
                />

        </RadioGroup>

        <TextView
            android:id="@+id/tv_working_hours"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/workout"
            android:textSize="@dimen/text_size_large"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/margin_xxlarge"
            />
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/margin_normal"
            android:layout_marginLeft="@dimen/margin_normal"
            >
        <CheckBox
            android:id="@+id/cb_time_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_medium"
            android:textColor="@color/black"
            android:button="@drawable/custom_checkbox_select"
            android:layout_marginTop="@dimen/margin_medium"
            android:paddingHorizontal="@dimen/margin_normal"
            android:text="@string/time_1"
            />
            <CheckBox
                android:id="@+id/cb_time_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_medium"
                android:textColor="@color/black"
                android:button="@drawable/custom_checkbox_select"
                android:layout_marginTop="@dimen/margin_normal"
                android:paddingHorizontal="@dimen/margin_normal"
                android:text="@string/time_2"
                />
            <CheckBox
                android:id="@+id/cb_time_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_medium"
                android:textColor="@color/black"
                android:button="@drawable/custom_checkbox_select"
                android:layout_marginTop="@dimen/margin_medium"
                android:paddingHorizontal="@dimen/margin_normal"
                android:text="@string/time_3"
                />
            <CheckBox
                android:id="@+id/cb_time_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_medium"
                android:textColor="@color/black"
                android:button="@drawable/custom_checkbox_select"
                android:layout_marginTop="@dimen/margin_medium"
                android:paddingHorizontal="@dimen/margin_normal"
                android:text="@string/time_4"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margin_xxxlarge"
            android:layout_marginHorizontal="@dimen/margin_normal"
            >

            <androidx.cardview.widget.CardView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_large"
                android:layout_marginHorizontal="@dimen/margin_normal"


                app:cardUseCompatPadding="true"
                app:cardElevation="8dp"
                app:cardCornerRadius="30dp"


                >
            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/light_gray_rounded_corner_bg"
                android:textAllCaps="true"
                android:layout_marginRight="@dimen/margin_small"
                android:text="@string/cancel"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_medium" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_large"
                android:layout_marginHorizontal="@dimen/margin_normal"


                app:cardUseCompatPadding="true"
                app:cardElevation="8dp"
                app:cardCornerRadius="30dp"


                >

            <Button
                android:id="@+id/btn_apply"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/theme_rounded_corner_bg"
                android:textAllCaps="true"
                android:text="@string/apply"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_medium" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>

    </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</layout>