<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#32000000"
    android:gravity="center"
    >
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_white_rounded"
        android:orientation="vertical"
        android:layout_marginHorizontal="@dimen/margin_large"
        android:gravity="center"
        >
        <LinearLayout
            android:id="@+id/ll_easy"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="@dimen/margin_normal"
            >
            <TextView
                android:id="@+id/tv_easy"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/easy"
                android:padding="@dimen/margin_normal"
                android:textSize="@dimen/text_size_medium"
                android:textColor="@color/black"
                />
            <TextView
                android:id="@+id/tv_easy_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/easy_time"
                android:padding="@dimen/margin_normal"
                android:textSize="@dimen/text_size_medium"
                android:textColor="@color/black"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_medium"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="@dimen/margin_normal"
            >
            <TextView
                android:id="@+id/tv_medium"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/medium"
                android:padding="@dimen/margin_normal"
                android:textSize="@dimen/text_size_medium"
                android:textColor="@color/black"
                />
            <TextView
                android:id="@+id/tv_medium_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/medium_time"
                android:padding="@dimen/margin_normal"
                android:textSize="@dimen/text_size_medium"
                android:textColor="@color/black"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_hard"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="@dimen/margin_normal"
            >
            <TextView
                android:id="@+id/tv_hard"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/hard"
                android:padding="@dimen/margin_normal"
                android:textSize="@dimen/text_size_medium"
                android:textColor="@color/black"
                />
            <TextView
                android:id="@+id/tv_hard_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hard_time"
                android:padding="@dimen/margin_normal"
                android:textSize="@dimen/text_size_medium"
                android:textColor="@color/black"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_very_hard"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="@dimen/margin_normal"
            >
            <TextView
                android:id="@+id/tv_very_hard"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/very_hard"
                android:padding="@dimen/margin_normal"
                android:textSize="@dimen/text_size_medium"
                android:textColor="@color/black"
                />
            <TextView
                android:id="@+id/tv_very_hard_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/very_hard_time"
                android:padding="@dimen/margin_normal"
                android:textSize="@dimen/text_size_medium"
                android:textColor="@color/black"
                />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>