<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    >

        <RelativeLayout
            android:id="@+id/layout"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            >

            <TextView
                android:id="@+id/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/verify_otp"
                android:textSize="@dimen/text_size_xxxxxlarge"
                android:textColor="@color/black"
                android:layout_below="@id/cross"
                android:layout_marginLeft="@dimen/margin_xxlarge"
                android:layout_marginTop="@dimen/margin_xxxxlarge"
                />

            <ImageView
                android:id="@+id/cross"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/cross"
                android:tint="@color/black"
                android:layout_alignParentRight="true"
                android:layout_marginTop="@dimen/margin_xxlarge"
                android:layout_marginRight="@dimen/margin_large"
                />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_centerInParent="true"
                >
            <LinearLayout
                android:id="@+id/login_layout"
                android:layout_below="@id/text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_xxlarge"
                >
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@drawable/white_bg_with_theme_rounded_corner"
                    android:layout_marginTop="@dimen/margin_xxlarge"
                    >
                    <EditText
                        android:id="@+id/et_otp"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/otp_hint"
                        android:maxLength="6"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:textSize="@dimen/text_size_normal"
                        android:inputType="number"
                        android:singleLine="true"
                        android:paddingVertical="@dimen/margin_normal"
                        android:background="@android:color/transparent"
                        android:paddingHorizontal="@dimen/margin_medium"
                        />

                </LinearLayout>


                <Button
                    android:id="@+id/verify"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/theme_rounded_corner_bg"
                    android:padding="@dimen/margin_medium"
                    android:text="@string/verify"
                    android:textAllCaps="false"
                    android:layout_marginVertical="@dimen/margin_large"
                    android:layout_marginHorizontal="@dimen/margin_large"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_normal"

                    />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_countdown_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password_text"
                android:textSize="@dimen/text_size_normal"
                android:textColor="@color/colorPrimary"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_below="@id/login_layout"
                />

            <LinearLayout
                android:id="@+id/ll_resend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/margin_large"
                android:layout_below="@id/login_layout"
                >
                <TextView
                    android:id="@+id/resend_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dont_get_otp"
                    android:textSize="@dimen/text_size_normal"
                    android:textColor="@color/colorPrimary"
                    android:gravity="center"
                    />
                <TextView
                    android:id="@+id/resend_otp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/resend_otp1"
                    android:layout_marginLeft="5dp"
                    android:textSize="@dimen/text_size_normal"
                    android:textColor="@color/colorPrimary"
                    android:gravity="center"
                    />
            </LinearLayout>

            </LinearLayout>


        </RelativeLayout>
</layout>